Adjust notifications on mobile & fix side navigation title overflow

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -396,6 +396,7 @@
       font-size: var(--font-xxsmall);
       font-weight: var(--font-weight-base);
       margin-left: 0;
+      max-width: 100%;
     }
   }
 
